[#582] Update install instructions